--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 body
 {
     margin : 0;
-    background-color : rgb(204, 204, 204);
+    background : radial-gradient(rgb(51, 204, 204),rgb(0, 204, 153));
     display: grid;
     justify-content: center;
     align-content: center;
