--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ article
     backdrop-filter: blur(10px);
     display: grid;
     transition: width 2s;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 #header
@@ -57,18 +58,13 @@ article
 
 #body
 {
+    padding : 10px;
     grid-area: 2 / 1 / 3 / 2;
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
-    grid-column-gap: 50px;
+    grid-column-gap: 30px;
     grid-row-gap: 0px;
     display : none;
-}
-
-#body > *
-{
-    padding: 20px;
 }
 
 #body img
@@ -80,7 +76,7 @@ article
 #body p
 {
     text-align: center;
-    font-size : 2rem;
+    font-size : 1.8rem;
     margin : 15px;
 }
 
@@ -145,5 +141,27 @@ article
 {
     margin : 0;
     text-align: center;
+}
+
+#footer
+{
+    margin-top : 10px;
+    display : none;
+    justify-content: center;
+}
+
+#footer p
+{
+    margin : 10px 30px;
+    padding : 10px 20px;
+    text-align : center;
+}
+
+#categorieActive
+{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border: 1px solid rgb(102, 102, 102);
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255,0.8);
 }
 
