--- a/patch/main.css
+++ b/patch/main.css
@@ -2,23 +2,126 @@
 {
      height : auto !important;
      background : radial-gradient(circle at bottom,rgb(51, 204, 204),rgb(0, 204, 153));
+     flex-direction: column;
+     align-items: center;
+}
+
+.atuiKernel_ToolsCarousel > p /* Erreur */
+{
+     font-size : 1.5rem;
+     margin : 50px 0;
+     display: none;
+}
+
+.atuiKernel_SectionText /* Mention deMétéo Concept */
+{
+     margin : 30px 0;
 }
 
 .atuiKernel_ToolsCarousel > div /* Aujourd'hui */
 {
      background : none;
-     width : 60%;
+     width : fit-content;
      margin : 50px 0;
      padding : 0;
-     border : 1px black dashed;
+     display: flex;
 }
 
 .atuiKernel_ToolsCarousel img
 {
-     width : 100px !important;
-     height : 100px !important;
      margin : 0 !important;
      padding : 0 !important;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(1) img
+{
+     width : 200px !important;
+     height : 200px !important;
+     margin : 0 !important;
+     padding : 0 !important;
+}
+
+.atuiKernel_ToolsCarousel > div > div
+{
+     display: flex;
+     flex-direction: column;
+     width:fit-content;
+     margin : 0 20px;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(1)
+{
+     align-items: center;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2)
+{
+     align-items: flex-start;
+     justify-content: center;
+}
+
+.atuiKernel_ToolsCarousel > div div p
+{
+     text-align: left;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > p
+{
+     font-weight: bold;
+     font-size: 1.3rem;
+}
+
+.atuiKernel_ToolsCarousel > div > div > div
+{
+     display: inline-flex;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(1) div
+{
+     margin-top : 20px;
+     padding : 0;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(1) div p
+{
+     color : rgba(255,255,255,0.8);
+     padding : 0 15px;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(2)
+{
+     padding : 10px 0;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(2) p
+{
+     font-size: 1.3rem;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(2) p:nth-child(1)
+{
+     color : rgb(0, 92, 230);
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(2) p:nth-child(2)
+{
+     color : rgb(230, 46, 0);
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(3)
+{
+     align-items: center;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(3) img
+{
+     width : 60px !important;
+     height : 60px !important;
+}
+
+.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(3) div p:nth-child(2)
+{
+     color : rgba(255,255,255,0.8);
 }
 
 body > section
@@ -36,7 +139,7 @@ body > section
      overflow: hidden;
      display: grid;
      grid-template-columns: 1fr;
-     grid-template-rows: 41px repeat(7, 1fr);
+     grid-template-rows: auto repeat(7, 1fr);
 }
 
 #dataTable > div /* Lignes */
@@ -65,6 +168,7 @@ body > section
 {
      font-weight : bold;
      text-align: center;
+     font-size: 1.2rem;
 }
 
 #dataTable > div > div > * /* Parties de cellule */
@@ -91,4 +195,14 @@ body > section
 #dataTable > div:nth-child(1n+2) > div:nth-child(3) p
 {
      margin : 5px;
+}
+
+#dataTable > div:nth-child(1n+2) > div:nth-child(3) p:nth-child(1)
+{
+     color : rgb(0, 92, 230);
+}
+
+#dataTable > div:nth-child(1n+2) > div:nth-child(3) p:nth-child(2)
+{
+     color : rgb(230, 46, 0);
 }
