--- a/patch/table.css
+++ b/patch/table.css
@@ -4,7 +4,7 @@
      border-radius: 20px;
      border : 2px rgb(179, 179, 179) solid;
      overflow: hidden;
-     display: grid;
+     display: none;
      grid-template-columns: 1fr;
      grid-template-rows: auto repeat(7, 1fr);
 }
