--- a/atui/SearchService/searchbar.css
+++ b/atui/SearchService/searchbar.css
@@ -3,7 +3,7 @@
 #atuiSearchservices_Header
 {
      background-color: transparent;
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      display: flex;
      justify-content: center;
      flex-direction: column;
@@ -12,14 +12,18 @@
 
 #atuiSearchservices_Header > div
 {
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      width : 100%;
      height : 40px;
+     overflow: hidden;
 }
 
 #atuiSearchservices_Header > div form input
 {
+     outline : none;
      background-color: transparent;
+     border-radius : var(--atuiKernel_Borderradius);
+     border : none !important;
      font-size: 1.5rem;
      padding : 5px;
      width : calc(100% - 60px);
