--- a/atui/kernel/cards.css
+++ b/atui/kernel/cards.css
@@ -49,16 +49,6 @@
           height: fit-content;
      }
 
-     .atuiKernel_SectionCardMainRow article img
-     {
-          width : 40%;
-     }
-
-     .atuiKernel_SectionCardMainRow article > div
-     {
-          width : 60%;
-     }
-
      .atuiKernel_SectionCardMainRow article > div h3
      {
           margin : 0;
@@ -123,7 +113,7 @@
      display: flex;
      flex-direction: column;
      border : 1px rgb(179, 179, 179) solid;
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      overflow: hidden;
      background-color: rgb(230, 230, 230);
 }
@@ -178,7 +168,7 @@
      display: flex;
      flex-direction: column;
      border : 1px rgb(179, 179, 179) solid;
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      overflow: hidden;
      background-color: rgb(230, 230, 230);
 }
@@ -229,7 +219,7 @@
 {
      display: flex;
      overflow: hidden;
-     border-radius : 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      min-height: 300px;
      max-height: 400px;
      position: relative;
@@ -312,7 +302,7 @@
 {
      display : flex;
      border : 1px rgb(179, 179, 179) solid;
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      overflow: hidden;
      background-color: rgb(230, 230, 230);
 }
@@ -321,7 +311,7 @@
 .atuiKernel_SectionCardMainColumn article img
 {
      margin : 10px;
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      height : fit-content;
 }
 
@@ -366,7 +356,7 @@
      margin : 10px;
      padding : 10px 20px;
      border : none;
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
      font-size : 1.2rem;
      font-family: var(--atuiKernel_FontsTitle);
 }
