--- a/atui/kernel/carousel.css
+++ b/atui/kernel/carousel.css
@@ -7,7 +7,7 @@
      display: flex;
      align-items: flex-end;
      justify-content: center;
-     background-attachment: fixed;
+     background-attachment: fixed; /* Créé option pour cette propriété / Peut créer bogue sur mobile car changement window height */
 }
 
 .atuiKernel_ToolsCarousel > div
@@ -45,6 +45,6 @@
      color : white;
      width : 200px;
      font-family : var(--atuiKernel_FontsTitle);
-     border-radius: 10px;
+     border-radius : var(--atuiKernel_Borderradius);
 }
 
