--- a/atui/kernel/footer.css
+++ b/atui/kernel/footer.css
@@ -41,37 +41,6 @@ body > footer
 }
 
 
-/* Contacts */
-
-#atuiKernel_ToolsContact
-{
-     margin : 10px;
-     margin-top : 40px !important;
-}
-
-#atuiKernel_ToolsContact > p
-{
-     font-family: var(--atuiKernel_FontsTitle);
-     font-weight: bold;
-     font-size: 1.5rem;
-     margin : 0;
-}
-
-#atuiKernel_ToolsContact a
-{
-     width : 50px;
-     height : 50px;
-     margin : 10px;
-     display: inline-block;
-}
-
-#atuiKernel_ToolsContact a img
-{
-     width : 50px;
-     height : 50px;
-}
-
-
 /* Explorer */
 
 #atuiKernel_ToolsExplorer
@@ -118,6 +87,7 @@ body > footer
 
 #atuiKernel_FooterInfo
 {
+     display: block;
      text-align : center;
      margin : 10px;
      margin-top : 20px;
@@ -125,7 +95,9 @@ body > footer
 
 #atuiKernel_FooterInfo *
 {
+     display: block;
      color : var(--atuiKernel_ToolsSettingsAccentcolor);
      font-size : 1.2rem;
+     margin : 10px;
 }
 
