--- a/atui/kernel/header.css
+++ b/atui/kernel/header.css
@@ -2,13 +2,14 @@
 
 #atuiKernel_Header
 {
-     background-color : var(--atuiKernel_ToolsSettingsAccentcolor);
+     background-color : var(--atuiKernel_ColorschemeOA7);
      min-height: 50px;
+     margin-bottom : 20px;
 }
 
 #atuiKernel_Header > aside
 {
-     background-color : var(--atuiKernel_ToolsSettingsDisplaymodeColorOpacity);
+     background-color : var(--atuiKernel_ColorschemeBB1);
      backdrop-filter: var(--atuiKernel_Blur);
      min-height : 50px;
      position: fixed;
@@ -45,11 +46,6 @@
      #atuiKernel_Header > aside > div
      {
           justify-content: space-between;
-     }
-
-     #atuiKernel_ToolsExplorer
-     {
-          justify-content: space-around;
      }
 
      #atuiKernel_HeaderBlockLeft,
