--- a/atui/kernel/footer.css
+++ b/atui/kernel/footer.css
@@ -2,23 +2,50 @@
 
 body > footer
 {
-     background-color : #c0c0c0;
-     border-top : 3px solid var(--atuiKernel_ToolsSettingsAccentcolor);
-     margin-top : 50px;
-     padding: 0 5%;
-     padding-bottom: 5px;
+     position: relative;
 }
 
 
-/* Responsives */
+/* Footer styles */
 
-@media (max-width : 767px) /* Smartphones */
+#atuiKernel_FooterContrast
 {
-     #atuiKernel_ToolsExplorer
-     {
-          margin : 0 5%;
-          justify-content: flex-start;
-     }
+     background-color : var(--atuiKernel_ColorschemeOA1);
+     margin-top : 50px;
+     padding: 20px 40px 5px 40px;
+}
+
+#atuiKernel_FooterFlat
+{
+     margin : 50px 5% 0 5%;
+     padding : 20px 0;
+}
+
+#atuiKernel_FooterIntegral
+{
+     background-color : var(--atuiKernel_ColorschemeOB1);
+     border-top : 3px solid var(--atuiKernel_ColorschemeOA6);
+     margin-top : 50px;
+     padding: 20px 40px 5px 40px;
+}
+
+#atuiKernel_FooterFloating
+{
+     background-color : var(--atuiKernel_ColorschemeOA1);
+     box-shadow: var(--atuiKernel_Shadow);
+     border-radius: var(--atuiKernel_Borderradius);
+     margin : 50px 5%;
+     padding: 20px 40px;
+}
+
+#atuiKernel_FooterModern
+{
+     background-color : var(--atuiKernel_ColorschemeBB1);
+     backdrop-filter: var(--atuiKernel_Blur);
+     border : 3px solid var(--atuiKernel_ColorschemeOB2);
+     border-radius: var(--atuiKernel_Borderradius);
+     margin : 50px 5%;
+     padding: 20px 40px;
 }
 
 
@@ -26,62 +53,209 @@ body > footer
 
 #atuiKernel_FooterScrolltop
 {
+     display: flex;
+     justify-content: center;
      position: absolute;
-     left : 50%;
-     transform : translate(-50%, -30px);
+     top : -30px;
+     left : 0;
+     right : 0;
 }
 
-#atuiKernel_FooterScrolltop img
+#atuiKernel_FooterScrolltop a
 {
+     display : block;
      border-radius : 100%;
-     border : 3px solid var(--atuiKernel_ToolsSettingsAccentcolor);
-     background-color: white;
+     border : 3px solid var(--atuiKernel_ColorschemeOA6);
+     background-color: var(--atuiKernel_ColorschemeOA1);
+     padding : 2.5px;
+     box-sizing: border-box;
+     width: 60px;
+     height: 60px;
+}
+
+#atuiKernel_FooterScrolltop a img
+{
      width : 50px;
      height : 50px;
 }
 
 
-/* Explorer */
+/* Responsives */
 
-#atuiKernel_ToolsExplorer
+@media (min-width : 768px) /* Computers */
+{
+     .atuiKernel_FooterContentsColumn /* Containers */
+     {
+          flex-direction: row;
+     }
+
+     .atuiKernel_FooterContentsColumn > div /* Categorie */
+     {
+          max-width : 30%;
+     }
+
+     .atuiKernel_FooterContentsRow > div /* Categorie */
+     {
+          max-height : 30%;
+     }
+}
+
+@media (max-width : 767px) /* Smartphones */
+{
+     .atuiKernel_FooterContentsColumn /* Containers */
+     {
+          flex-direction: column;
+     }
+}
+
+
+/* Vertical and horizontal contents */
+
+.atuiKernel_FooterContentsColumn,
+.atuiKernel_FooterContentsRow
+/* Container */
 {
      display : flex;
      flex-wrap : wrap;
-     margin-top : 20px;
+     justify-content: space-around;
+     margin : 20px 0;
 }
 
-#atuiKernel_ToolsExplorer div
-{
-     margin : 10px;
-}
-
-#atuiKernel_ToolsExplorer div p
+.atuiKernel_FooterContentsColumn h3,
+.atuiKernel_FooterContentsRow h3
+/* Title */
 {
      font-weight: bold;
-     font-size : 1.5rem;
-     margin : 15px 0;
+     font-size : 1.2rem;
      font-family: var(--atuiKernel_FontsTitle);
-     margin : 0;
+     margin : 10px 0;
 }
 
-#atuiKernel_ToolsExplorer div ul
+
+/* Row contents */
+
+.atuiKernel_FooterContentsRow /* Containers */
+{
+     flex-direction: column;
+}
+
+.atuiKernel_FooterContentsRow > div /* Categorie */
+{
+     margin : 5px 0;
+}
+
+
+/* Column contents */
+
+.atuiKernel_FooterContentsColumn > div /* Categorie */
+{
+     margin : 0 5px;
+}
+
+
+/* Lists */
+
+.atuiKernel_FooterList /* List of elements */
 {
      list-style: none;
-     margin : 8px;
-     margin-left : 15px;
      font-size : 1.1rem;
-     padding-left : 20px;
+     margin : 10px 0;
+     padding-left : 0;
 }
 
-#atuiKernel_ToolsExplorer div ul li
+.atuiKernel_FooterList li /* Elements */
 {
-     margin : 5px;
+     margin : 5px 0;
 }
 
-#atuiKernel_ToolsExplorer div ul li a
+.atuiKernel_FooterList li a /* Links of elements */
 {
-     color : black;
+     color : var(--atuiKernel_ColorschemeOBF);
 }
+
+.atuiKernel_FooterList li a:hover
+/* Links of elements */
+{
+     font-weight: normal;
+     text-decoration: underline;
+}
+
+
+/* Logotype & Description */
+
+.atuiKernel_FooterLogotype > a,
+.atuiKernel_FooterDescription > a
+{
+     display: flex;
+     align-content: center;
+}
+
+.atuiKernel_FooterLogotype > a img,
+.atuiKernel_FooterDescription > a img
+{
+     width : 40px;
+     height : 40px;
+}
+
+.atuiKernel_FooterLogotype > a p,
+.atuiKernel_FooterDescription > a p
+{
+     margin : 0 10px;
+     font-size : 2rem;
+     font-weight : bold;
+     display : inline-block;
+     font-family : var(--atuiKernel_FontsTitle);
+     overflow: hidden;
+     white-space: nowrap;
+     text-overflow: ellipsis;
+}
+
+
+/* Description */
+
+.atuiKernel_FooterDescription
+{
+     display: flex;
+     align-content: center;
+     flex-direction: column;
+}
+
+.atuiKernel_FooterDescription > *
+{
+     margin : 5px 0;
+}
+
+.atuiKernel_FooterDescription > div *
+{
+     display: block;
+     font-style: italic;
+     margin : 5px 0;
+}
+
+
+/* Legals */
+
+#atuiKernel_FooterLegals
+{
+     display: flex;
+     justify-content: center;
+     flex-wrap: wrap;
+     margin : 20px 0;
+}
+
+#atuiKernel_FooterLegals *
+{
+     color : var(--atuiKernel_ColorschemeOB7);
+     margin : 5px 20px;
+}
+
+#atuiKernel_FooterLegals *:hover
+/* Links of elements */
+{
+     font-weight: normal;
+     text-decoration: underline;
+}
+
 
 /* Info */
 
@@ -89,15 +263,14 @@ body > footer
 {
      display: block;
      text-align : center;
-     margin : 10px;
-     margin-top : 20px;
+     margin : 20px 0;
 }
 
 #atuiKernel_FooterInfo *
 {
      display: block;
-     color : var(--atuiKernel_ToolsSettingsAccentcolor);
-     font-size : 1.2rem;
+     font-size : 1.1rem;
+     color : var(--atuiKernel_ColorschemeOA6);
      margin : 10px;
 }
 
