--- a/atui/kernel/main.css
+++ b/atui/kernel/main.css
@@ -1,3 +1,4 @@
+@import url('./button.css');
 @import url('./cards.css');
 @import url('./carousel.css');
 @import url('./contacts.css');
@@ -6,6 +7,7 @@
 @import url('./footer.css');
 @import url('./header.css');
 @import url('./image.css');
+@import url('./input.css');
 @import url('./navigator.css');
 @import url('./notification.css');
 @import url('./paragraph.css');
@@ -30,48 +32,35 @@
      --atuiKernel_FontsTitle : 'Red Hat Display','Montserrat',Arial;
      --atuiKernel_FontsText : 'Montserrat',Arial;
      --atuiKernel_FontsSpecial : 'Lobster','Montserrat',Arial;
-     --atuiKernel_ToolsSettingsAccentcolor : rgb(230, 51, 0);
-     --atuiKernel_ToolsSettingsAccentcolorOpacity : rgb(230, 51, 0, 0.8);
-     --atuiKernel_ToolsSettingsDisplaymodeColor : rgb(255,255,255);
-     --atuiKernel_ToolsSettingsDisplaymodeColorOpacity : rgba(255,255,255,0.8);
      --atuiKernel_Shadow : rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
      --atuiKernel_Blur : blur(5px);
      --atuiKernel_Borderradius : 10px;
 }
 
-@media (prefers-color-scheme: dark) /* Dark theme */
-{
-     :root
-     {
-          --atuiKernel_ToolsSettingsDisplaymodeColor : rgb(102,102,102);
-          --atuiKernel_ToolsSettingsDisplaymodeColorOpacity : rgba(102,102,102,0.8);
-     }
-}
-
 body
 {
      margin : 0;
-     background-color: var(--atuiKernel_ToolsSettingsDisplaymodeColor);
+     background : var(--atuiKernel_ColorschemeOB0);
 }
 
 body *
 {
      font-family: var(--atuiKernel_FontsText);
+     color : var(--atuiKernel_ColorschemeOBF);
 }
 
 
-/* Links */
+/* Default props of balises */
 
 a
 {
      text-decoration: none;
-     color: var(--atuiKernel_ToolsSettingsAccentcolor);
+     color: var(--atuiKernel_ColorschemeOA5);
 }
 
 a:hover, a:active
 {
      font-weight: bold;
-     text-decoration: underline;
 }
 
 
