--- a/patch/today.css
+++ b/patch/today.css
@@ -1,95 +1,114 @@
-.atuiKernel_ToolsCarousel > div /* Aujourd'hui */
+/* Global */
+
+.atuiKernel_ToolsCarousel
 {
-     background : none;
-     width : fit-content;
-     margin : 50px 0;
-     padding : 0;
+     height : auto !important; /* ATUI */
+}
+
+.atuiKernel_ToolsCarousel > *
+{
+     margin : 40px 10%; /* ATUI */
+}
+
+:root
+{
+     --veryCold : rgb(0, 102, 255); /* x < 5 */
+     --cold : rgb(51, 187, 255); /* 6 < 15 */
+     --lukewarm : rgb(255, 204, 153); /* 16 < 25 */
+     --hot : rgb(255, 128, 128); /* 26 < 35 */
+     --veryHot : rgb(230, 46, 0); /* 36 < x */
+}
+
+
+/* Log */
+
+#log
+{
+     font-size: 2rem;
+     text-align: center; /* pour mobile / ATUI */
+}
+
+
+/* Today */
+
+#today
+{
+     background: transparent; /* ATUI */
      display: none;
+     padding : 0; /* ATUI */
 }
 
-.atuiKernel_ToolsCarousel p /* Toutes le texte */
-{
-     text-align: left;
-}
-
-.atuiKernel_ToolsCarousel img /* Toutes les images */
-{
-     margin : 0 !important;
-     padding : 0 !important;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(1) img /* Image du ciel */
-{
-     width : 200px !important;
-     height : 200px !important;
-     margin : 0 !important;
-     padding : 0 !important;
-}
-
-.atuiKernel_ToolsCarousel > div > div /* Colonnes de Today */
-{
-     display: flex;
-     flex-direction: column;
-     width:fit-content;
-     margin : 0 20px;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(1) /* Première colonne */
-{
-     align-items: center;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) /* Seconde colonne */
-{
-     align-items: flex-start;
-     justify-content: center;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) > p /* Nom de la ville */
+#cityToday
 {
      font-weight: bold;
-     font-size: 1.3rem;
+     font-size: 1.4rem;
+     margin : 0 0 10px 0;
 }
 
-.atuiKernel_ToolsCarousel > div > div > div /* Température et vent */
+
+/* Information */
+
+#information
 {
-     display: inline-flex;
+     display: flex;
+     flex-direction: row;
+     justify-content: center; /* ATUI */
+     flex-wrap: wrap;
 }
 
-.atuiKernel_ToolsCarousel > div > div:nth-child(1) div /* Conteneur infos pluie */ 
+#information > *
 {
-     margin-top : 20px;
-     padding : 0;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(1) div p /* Texte dans infos pluie */ 
-{
-     color : rgba(255,255,255,0.8);
-     padding : 0 15px;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(2) /* Conteneur température */
-{
-     padding : 10px 0;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(2) p /* Texte température */
-{
-     font-size: 1.3rem;
-}
-
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(3) /* Conteneur vent */
-{
+     margin : 0 40px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
      align-items: center;
 }
 
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(3) img /* Image direction vent */
+#skyToday div,
+#windToday div
 {
-     width : 60px !important;
-     height : 60px !important;
+     display: flex;
+     justify-content: center;
+     margin : 10px 0;
 }
 
-.atuiKernel_ToolsCarousel > div > div:nth-child(2) > div:nth-child(3) div p:nth-child(2) /* Rafale */
+#skyToday p,
+#windToday p
 {
-     color : rgba(255,255,255,0.8);
+     margin : 0 10px;
+     color : var(--atuiKernel_ColorschemeOB6);
 }
+
+
+/* Sky */
+
+#skyToday img
+{
+     width : 100px;
+     height : 100px;
+}
+
+
+/* Temperature */
+
+#tempToday
+{
+     flex-direction: row;
+}
+
+#tempToday p
+{
+     font-size : 1.25rem;
+     margin : 15px;
+}
+
+
+/* Wind */
+
+#windToday img
+{
+     width : 70px;
+     height : 70px;
+}
+
