--- a/patch/today.css
+++ b/patch/today.css
@@ -5,18 +5,29 @@
      height : auto !important; /* ATUI */
 }
 
-.atuiKernel_ToolsCarousel > *
+@media (min-width : 768px) /* Computers */
 {
-     margin : 40px 10%; /* ATUI */
+     .atuiKernel_ToolsCarousel > *
+     {
+          margin : 40px 10%; /* ATUI */
+     }
+}
+
+@media (max-width : 767px) /* Smartphones */
+{
+     .atuiKernel_ToolsCarousel > *
+     {
+          margin : 20px 5%; /* ATUI */
+     }
 }
 
 :root
 {
-     --veryCold : rgb(0, 102, 255); /* x < 5 */
-     --cold : rgb(51, 187, 255); /* 6 < 15 */
-     --lukewarm : rgb(255, 204, 153); /* 16 < 25 */
-     --hot : rgb(255, 128, 128); /* 26 < 35 */
-     --veryHot : rgb(230, 46, 0); /* 36 < x */
+     --veryCold : rgb(187, 153, 255); /* x < 5 */
+     --cold : rgb(102, 204, 255); /* 6 < 15 */
+     --lukewarm : rgb(153, 255, 153); /* 16 < 25 */
+     --hot : rgb(255, 153, 128); /* 26 < 35 */
+     --veryHot : rgb(255, 128, 255); /* 36 < x */
 }
 
 
@@ -77,7 +88,6 @@
 #windToday p
 {
      margin : 0 10px;
-     color : var(--atuiKernel_ColorschemeOB6);
 }
 
 
