fix : some bugfixes
- The wind direction was backwards.
- The rain information are now displayed if the probability is equal or higher than 50.
- Introduction to Prettier.

--- a/patch/main.css
+++ b/patch/main.css
@@ -1,53 +1,42 @@
-@import url('./table.css');
-@import url('./today.css');
-
+@import url("./table.css");
+@import url("./today.css");
 
 /* Global */
 
-:root
-{
-     --colorLowTemp : rgb(0, 92, 230);
-     --colorHighTemp : rgb(230, 46, 0);
+:root {
+    --colorLowTemp: rgb(0, 92, 230);
+    --colorHighTemp: rgb(230, 46, 0);
 }
 
-body > section /* Section */
-{
-     display : flex;
-     flex-direction: column;
-     align-items: center;
+body > section /* Section */ {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
 
 /* Common */
 
-.temperature p:first-child /* Coldest temperature */
-{
-     color : var(--colorLowTemp);
+.temperature p:first-child /* Coldest temperature */ {
+    color: var(--colorLowTemp);
 }
 
-.temperature p:last-child /* Hottest temperature */
-{
-     color : var(--colorHighTemp);
+.temperature p:last-child /* Hottest temperature */ {
+    color: var(--colorHighTemp);
 }
 
 .rain p,
-.wind p
-{
-     color : var(--atuiKernel_ColorschemeOB6);
+.wind p {
+    color: var(--atuiKernel_ColorschemeOB6);
 }
 
 .rain p:nth-child(1),
 .wind p:nth-child(1)
-/* First element of rain or wind */
-{
-     font-weight: bold;
+/* First element of rain or wind */ {
+    font-weight: bold;
 }
-
 
 /* Paragraph */
 
-.atuiKernel_SectionText p
-{
-     text-align: center;
+.atuiKernel_SectionText p {
+    text-align: center;
 }
-
