fix: some bugfixes
- JS variable declaration error stops the script execution.
- In today, date is wrapped on mobile.

--- a/src/today.css
+++ b/src/today.css
@@ -45,6 +45,12 @@
     align-items: center;
 }
 
+@media (width <= 767px) /* Smartphones */ {
+    #today {
+        flex-direction: column;
+    }
+}
+
 #cityToday {
     font-weight: bold;
     font-size: 1.4rem;
